<resources>
    <string name="app_name">cats-vs-dogs</string>
    <string name="desc_image_preview">Image to be classified</string>
    <string name="button_1_text">Upload Image</string>
    <string name="button_2_text">Start Live Camera</string>
    <string name="prediction_text">Prediction will appear here</string>
    <string name="title">Cat Vs Dog Classifier</string>
    <string name="model_loading_fails">Model not loaded</string>

</resources>