<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:shadowColor="#44000000"
        android:shadowDx="2"

        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/title"
        android:textColor="@color/title_blue"

        android:textSize="28sp"
        android:textStyle="bold" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:strokeColor="@color/title_blue"
        app:strokeWidth="2dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <com.abhijit.cats_vs_dogs.ui.OverlayView
                android:id="@+id/overlayView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F0F0F0"
                android:contentDescription="@string/desc_image_preview"
                android:padding="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder"
                app:tint="#CCCCCC" />

        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/button_1_text"
        android:textColor="@color/button_text" />


    <Button
        android:id="@+id/btnLiveCamera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/button_2_text"
        android:textColor="@color/button_text" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/prediction_text"
        android:textColor="@color/prediction_text"
        android:textSize="20sp" />


</LinearLayout>